--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,9 @@ jobs:
   build_skim:
     runs-on: ubuntu-latest
     container: rootproject/root-conda:6.18.04
+    strategy:
+      matrix:
+        version: [6.18.04, latest]
     steps:
       - name: checkout repository
         uses: actions/checkout@v2
