--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,15 +7,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: echo hello world
+
   build_skim:
+    needs: greeting
     runs-on: ubuntu-latest
-    container: rootproject/root-conda:6.18.04
+    container: rootproject/root-conda:${{ matrix.version }}
     strategy:
       matrix:
         version: [6.18.04, latest]
     steps:
       - name: checkout repository
         uses: actions/checkout@v2
+
       - name: build
         run: |
           COMPILER=$(root-config --cxx)
