--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,7 +67,7 @@ jobs:
 
   test:
     needs: plot
-    run-on: ubuntu-latest
+    runs-on: ubuntu-latest
     container: rootproject/root-conda:6.18.04
     steps:
       - name: checkout repository
