--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -75,7 +75,8 @@ jobs:
       - name: Download from skim
         uses: actions/download-artifact@v2
         with:
-          name: skim_ggH.log
+          name: skim_ggH
+          path: skim_ggH.log
       - name: Download from plot
         uses: actions/download-artifact@v2
         with:
